# pytest-split

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .test_durations  .travis.yml  404.html  CHANGELOG.md  LICENCE  LICENCE.rej  LICENSE  README.md  README.md.rej  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml.rej  setup.cfg  setup.py
.github/: pull_request_template.md
.github/actions/python-poetry-env/: action.yml
.github/workflows/: cookiecutter.yml  dependencies.yml  draft_release.yml  publish.yml  release.yml  test.yml  test.yml.rej
api_docs/: index.html
changelog/: index.html
docs/: api_docs.md
search/: search_index.json
src/pytest_split/: __init__.py  algorithms.py  cli.py  ipynb_compatibility.py  plugin.py
tests/: test_algorithms.py  test_cli.py  test_ipynb.py  test_plugin.py  test_version.py
